[package]
name = "limit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = { version="0.14.0", features = ["rustls-tls"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
url = "2.1.0"
